@@ -20,9 +20,11 @@
 		  <b>#Stages:</b>
 		  <%=h @recipe.stages.count %>
 		</p>
-		<br />
-		<%= link_to 'Edit Recipe', edit_recipe_path(@recipe), :class => 'arrow_link' %> |
-		<%= link_to 'Delete', recipe_path(@recipe), :confirm => 'Are you sure?', :method => :delete, :class => 'arrow_link' %>
+		<% if current_user.admin? %>
+  		<br />
+	  	<%= link_to 'Edit Recipe', edit_recipe_path(@recipe), :class => 'arrow_link' %> |
+	  	<%= link_to 'Delete', recipe_path(@recipe), :confirm => 'Are you sure?', :method => :delete, :class => 'arrow_link' %>
+	  <% end %>
 	</div>	
   </div>
   <div class="box_bottom_left">
